# Dental-Chatbot

./: .env.example  .gitignore  .prettierignore  README.md  SUBMISSION_DOCUMENTATION.md  package-lock.json  package.json  turbo.json
apps/api/: README.md  alembic.ini  config.py  database.py  main.py  package.json  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260326_e0164c575ce0_initial_schema.py
apps/api/llm/: __init__.py  date_parse.py  gemini.py  intent.py  interpreter.py  receptionist.py
apps/api/models/: __init__.py  audit.py  base.py  content.py  conversation.py  notification.py  patient.py  practice.py  scheduling.py  staff.py
apps/api/routers/: __init__.py  appointments.py  chat.py  clinic.py  employee.py  patients.py
apps/api/schemas/: __init__.py  appointment.py  chat.py  clinic.py  employee.py  patient.py  tools.py
apps/api/scripts/: dev.sh  lint.sh  migrate.sh  seed.sh  test.sh
apps/api/state_machine/: __init__.py  definitions.py  extractors.py  family_booking.py  machine.py
apps/api/tests/: conftest.py  test_dob_extract.py  test_employee_schedule.py  test_existing_patient_booking.py  test_family_tools.py  test_gratitude_idle_reply.py  test_health.py  test_intent_detection.py  test_interpreter_scenarios.py  test_name_extraction.py  test_new_patient_booking.py  test_patient_tools.py  test_reschedule_cancel.py  test_state_machine.py  test_workflow_thread_reset.py
apps/api/tools/: __init__.py  clinic_tools.py  family_tools.py  notification_tools.py  patient_tools.py  scheduling_tools.py  validators.py
(+38 files in other folders)
