[project]
name = "dental-chatbot-api"
version = "0.1.0"
description = "FastAPI backend for the dental chatbot prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "google-genai>=1.0.0",
]

[dependency-groups]
dev = [
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
